# gol-rules-haskell

./: .gitignore  README.md  gol.cabal  stack.yaml
app/: Combination.hs  Life.hs  Main.hs  WireWorld.hs  blinker.txt  glider.txt  ww.txt
specs/: GridSpec.hs  RulesSpec.hs  SerializationSpec.hs  Spec.hs
src/: Gol.hs  Main.hs
src/Gol/: Grid.hs  Render.hs  Rule.hs  Rules.hs  Serialization.hs  Transition.hs  World.hs
