name:                gol
version:             0.1.0.0
synopsis:            Game of life in haskell
description:         Please see README.md
homepage:            http://github.com/Ivan1931/gol#readme
license:             MIT
license-file:        LICENSE
author:              Jonah Hooper
maintainer:          jonah.graham.hooper@gmail.com
copyright:           2016 Jonah Hooper
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gol
  hs-source-dirs:      
    app
  main-is:             
    Life.hs
  default-language:    
    Haskell2010
  build-depends:       
    base >= 4.7 && < 5
    , gol
    , containers

Library
  hs-source-dirs:      
    src
  default-language:    
    Haskell2010
  exposed-modules: 
    Gol
    , Gol.Grid
    , Gol.Rule
    , Gol.Rules
    , Gol.Render
    , Gol.Serialization
    , Gol.World
  build-depends:
    base >= 4.7 && < 5
    , containers
    , OpenGL >= 3 && < 3.1
    , GLUtil >= 0.9 && < 0.10
    , OpenGLRaw >= 3 && < 3.2
    , GLUT >= 2.0.0 && <= 2.7.0.10
    

Test-suite spec
    Type:
        exitcode-stdio-1.0
    main-is: 
        Spec.hs
    hs-source-dirs:
        specs
    default-language:    
        Haskell2010
    build-depends:       
        base >= 4.7 && < 5
        , gol
        , hspec
        , QuickCheck
